# monitor-sdk

./: README.md
nodejs/: README.md  package.json
nodejs/src/: index.js
python/: README.md  pyproject.toml
python/botmonitor/: __init__.py  monitor.py
rocketbot/: README.md  __init__.py  package.json
rocketbot/libs/: botmonitorObject.py
