[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "botmonitor"
version = "1.0.0"
description = "Python SDK for BotMonitor — send telemetry, track jobs, and monitor bots."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = ["requests>=2.20"]

[project.urls]
Homepage = "https://github.com/robotipy/botmonitor-python"
